; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_proxy.c_get_delegation_indirect.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_proxy.c_get_delegation_indirect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**)* @get_delegation_indirect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_delegation_indirect(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  store i32* %7, i32** %6, align 8
  br label %8

8:                                                ; preds = %24, %2
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %8
  %12 = load i32*, i32** %6, align 8
  %13 = call i64 @need_delegation(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i32**, i32*** %5, align 8
  %17 = icmp ne i32** %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %15
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @type_iface_get_inherit(i32* %19)
  %21 = load i32**, i32*** %5, align 8
  store i32* %20, i32** %21, align 8
  br label %22

22:                                               ; preds = %18, %15
  store i32 1, i32* %3, align 4
  br label %28

23:                                               ; preds = %11
  br label %24

24:                                               ; preds = %23
  %25 = load i32*, i32** %6, align 8
  %26 = call i32* @type_iface_get_inherit(i32* %25)
  store i32* %26, i32** %6, align 8
  br label %8

27:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %22
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @need_delegation(i32*) #1

declare dso_local i32* @type_iface_get_inherit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
